INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FIND_LIBRARY(CUDA_LIBRARY cuda PATHS ${CUDA_INSTALL_PREFIX} PATH_SUFFIXES lib)
FIND_PATH(CUDA_INCLUDE_DIR cuda.h PATHS ${INCLUDE_DIRECTORIES} ${CUDA_INSTALL_PREFIX} PATH_SUFFIXES cuda include)


IF(CUDA_INCLUDE_DIR AND CUDA_LIBRARY)
	SET(CUDA_FOUND TRUE)
ELSE(CUDA_INCLUDE_DIR AND CUDA_LIBRARY)
	SET(CUDA_FOUND FALSE)
ENDIF(CUDA_INCLUDE_DIR AND CUDA_LIBRARY)

FIND_PROGRAM(NVCC_EXECUTABLE nvcc PATHS ${CUDA_INSTALL_PREFIX} PATH_SUFFIXES bin)

IF(NVCC_EXECUTABLE)
	SET(NVCC_FOUND TRUE)
ELSE(NVCC_EXECUTABLE)
	SET(NVCC_FOUND FALSE)
ENDIF(NVCC_EXECUTABLE)

IF(NOT CUDA_FOUND)
	MESSAGE(FATAL_ERROR "Cuda not found")
ENDIF(NOT CUDA_FOUND)

IF(NOT NVCC_FOUND)
	MESSAGE(FATAL_ERROR "NVCC not found")
ENDIF(NOT NVCC_FOUND)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(python EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(test EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)


