FIND_PACKAGE(PythonLibs)

IF(NOT PYTHON_LIBRARIES)
	MESSAGE(FATAL_ERROR "Python development libraries not found")
ENDIF(NOT PYTHON_LIBRARIES)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

ADD_LIBRARY(pycudamm SHARED cuda.cpp)
SET_TARGET_PROPERTIES(pycudamm PROPERTIES PREFIX "")

TARGET_LINK_LIBRARIES(pycudamm boost_python)
TARGET_LINK_LIBRARIES(pycudamm cudamm)
TARGET_LINK_LIBRARIES(pycudamm ${CUDA_LIBRARY})
TARGET_LINK_LIBRARIES(pycudamm ${PYTHON_LIBRARIES})

